--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "dev.mese.starthack.a2017.assismed"
         minSdkVersion 21
@@ -34,4 +34,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     dependencies { compile 'com.ciscospark:androidsdk:0.1.0' }
+
+    dependencies {
+        compile 'com.karumi:dexter:4.2.0'
+    }
 }
