--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.mese.starthack.a2017.assismed">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -18,10 +22,14 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
-                <data android:scheme="assismedapp" android:host="responsecallback" />
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data
+                    android:host="responsecallback"
+                    android:scheme="assismedapp" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
